# OCR_PROJECT

./: .env.example  .gitignore  ABUSE_CASES.md  ACCEPTANCE_RUN_REPORT.md  AMD_DEVELOPER_CLOUD_READINESS.md  ANTHROPIC_SUPPORT_READINESS.md  ARCHITECTURE.md  BASELINE_TEST_RESULTS.md  CHANGELOG.md  CLI_COMMAND_REFERENCE.md  CODE_OF_CONDUCT.md  COMMERCIAL_COMPONENTS_POLICY.md  COMPLETION_FINAL_REPORT.md  COMPLETION_TEST_RESULTS.md  COMPLETION_UNFINISHED_ITEMS.md  CONTRIBUTING.md  CURRENT_FEATURE_AUDIT.json  CURRENT_FEATURE_AUDIT.md  DATA_LICENSES.md  DATA_PIPELINE_PLAN.md  DEPENDENCY_SECURITY_REPORT.md  DISTORTION_IMPLEMENTATION_REPORT.md  DISTORTION_REGISTRY.json  EXTERNAL_BLOCKERS.md  FEATURE_STATUS_MATRIX.json  FINAL_PUBLICATION_REPORT.md  LICENSE  LICENSE_RECOMMENDATION.md  LOCAL_OCR_INTEGRATION_REPORT.md  MERGE_ARCHITECTURE_DECISIONS.md  MERGE_DATABASE_REPORT.md  MERGE_DATA_REPORT.md  MERGE_DEPENDENCY_REPORT.md  MERGE_EXCLUSIONS.json  MERGE_FILE_MAP.json  MERGE_FINAL_REPORT.md  MERGE_LICENSE_REPORT.md  MERGE_OPEN_ISSUES.md  MERGE_PROVENANCE.md  MERGE_RELEASE_CHECKLIST.md  (+77 more)
.streamlit/: config.toml
assets/: styles.css
clouda_contracts/: __init__.py  adapters.py  archive_security.py  checksums.py  dataset_identity.py  evaluation_policy.py  identity.py  model_observation.py  observations.py  ocr_observation.py  page_identity.py  queues.py  references.py  schema_versions.py  security.py  statuses.py  storage.py  storage_uri.py
clouda_data/: __init__.py  lifecycle.py  locations.py
clouda_models/: __init__.py  evaluation.py  local_models.py  metadata.py  providers.py  registry.py
clouda_training/: __init__.py  cli.py  exporter.py  planner.py
constraints/: py311.txt
docs/: AMD_ROCM_ROADMAP.md  ARCHITECTURE.md  MICROSOFT_STARTUPS_APPLICATION.md  MODEL_EVALUATION_TEMPLATE.md  MODEL_INTEGRATION.md  MODEL_SELECTION_STATUS.md  ROADMAP.md  TESTING.md
pdfword/: accuracy.py  ai_model_router.py  auto_eval.py  backup.py  checkpoints.py  cleanup.py  constants.py  database.py  (+31 more)
(+314 files in other folders)
