[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clouda-pdf"
version = "0.2.0"
description = "Arabic-first PDF-to-DOCX runtime with isolated data, training, and model subsystems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11,<3.12"
dependencies = [
  "Pillow>=10.4.0",
  "pypdf>=4.3.1",
  "pypdfium2>=4.30.0",
  "python-docx>=1.1.2",
  "requests>=2.32.0"
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "streamlit>=1.36.0",
  "uvicorn>=0.30.0"
]
worker = [
  "redis>=5.0.0",
  "rq>=2.0.0"
]
data = [
  "PyYAML==6.0.2",
  "defusedxml==0.7.1",
  "jsonschema==4.23.0"
]
training = [
  "PyYAML==6.0.2"
]
models = [
  "requests>=2.32.0"
]
test = [
  "fakeredis>=2.23.0",
  "httpx>=0.27.0",
  "pdfplumber>=0.11.0",
  "PyMuPDF>=1.24.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]
dev = [
  "black>=24.0.0",
  "build>=1.2.2",
  "mypy>=1.10.0",
  "ruff>=0.5.0"
]

[project.scripts]
clouda-data = "clouda_data.pipeline.cli:main"
clouda-training = "clouda_training.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "pdfword*",
  "clouda_contracts*",
  "clouda_data*",
  "clouda_models*",
  "clouda_training*"
]
exclude = ["tests*"]

[tool.setuptools.package-data]
clouda_data = [
  "resources/*.json",
  "resources/distortions/*.json"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
  "audit_backups",
  "backups",
  "conversions",
  "data",
  "outputs",
  "samples/generated"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.coverage.run]
branch = true
source = [
  "pdfword",
  "clouda_contracts",
  "clouda_data",
  "clouda_models",
  "clouda_training"
]

[tool.coverage.report]
show_missing = true
